@@ -6,6 +6,8 @@ git-annex (5.20140406) UNRELEASED; urgency=medium
     changes to a ssh remote, and pulls.
     XMPP is no longer needed in this configuration!
     Requires the remote server have git-annex-shell with notifychanges support.
+  * webapp: Show a network signal icon next to ssh remotes that
+    it's currently connected with.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Apr 2014 16:22:02 -0400
 
